Fix displaying horizontal scrollbar
By setting width and height to 100%, the pdf-viewer now only takes the horizontal
and vertical space given to it (indirectly through a container element)
by the developer.
Now the horizontal scrollbar isn't at the end of the pdf file but rather at the
end of the pdf-viewer. This changes the amount of space that the viewer will
occupy, thus potentially breaking previous integrations.

--- a/src/app/pdf-viewer/pdf-viewer.component.scss
+++ b/src/app/pdf-viewer/pdf-viewer.component.scss
@@ -1,5 +1,7 @@
 .ng2-pdf-viewer-container {
-  overflow-x: auto;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
 }
 
 :host /deep/ .textLayer {
@@ -231,14 +233,5 @@
   &.removePageBorders .page {
     margin: 0px auto 10px auto;
     border: none;
-  }
-
-  &.singlePageView {
-    display: inline-block;
-
-    .page {
-      margin: 0;
-      border: none;
-    }
   }
 }
